--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "build": "webpack --config webpack.prod.js",
     "start": "sirv dist --cors --single --host --port 8080",
     "start:dev": "webpack serve --color --progress --config webpack.dev.js",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
     "eslint": "eslint --ext .tsx,.js ./src/",
     "lint": "npm run eslint",
     "format": "prettier --check --write ./src/**/*.{tsx,ts}",
@@ -27,10 +27,10 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^14.6.1",
-    "@types/jest": "^29.5.14",
     "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^8.17.0",
     "@typescript-eslint/parser": "^8.17.0",
+    "@vitejs/plugin-react": "^4.3.3",
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.2",
     "css-minimizer-webpack-plugin": "^7.0.0",
@@ -41,37 +41,36 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "html-webpack-plugin": "^5.6.3",
     "imagemin": "^9.0.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "jest-fixed-jsdom": "^0.0.9",
+    "jsdom": "^25.0.1",
     "mini-css-extract-plugin": "^2.9.2",
     "postcss": "^8.4.49",
     "prettier": "^3.4.2",
     "prop-types": "^15.8.1",
     "raw-loader": "^4.0.2",
     "react-axe": "^3.5.4",
-    "react-docgen-typescript-loader": "^3.7.2",
-    "react-router-dom": "^7.0.2",
+    "react-router-dom": "^7.1.0",
     "regenerator-runtime": "^0.14.1",
     "rimraf": "^6.0.1",
     "style-loader": "^4.0.0",
     "svg-url-loader": "^8.0.0",
     "terser-webpack-plugin": "^5.3.10",
-    "ts-jest": "^29.2.5",
     "ts-loader": "^9.5.1",
     "tsconfig-paths-webpack-plugin": "^4.2.0",
     "tslib": "^2.8.1",
     "typescript": "^5.7.2",
     "url-loader": "^4.1.1",
+    "vite": "^6.4.1",
+    "vitest": "^4.0.5",
     "webpack": "^5.97.0",
     "webpack-bundle-analyzer": "^4.10.2",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.1.0",
+    "webpack-dev-server": "^5.2.1",
     "webpack-merge": "^6.0.1"
   },
   "dependencies": {
-    "@patternfly/react-core": "^6.0.0",
-    "@patternfly/react-icons": "^6.0.0",
-    "@patternfly/react-styles": "^6.0.0",
+    "@patternfly/react-core": "^6.4.0",
+    "@patternfly/react-icons": "^6.4.0",
+    "@patternfly/react-styles": "^6.4.0",
     "react": "^18",
     "react-dom": "^18",
     "sirv-cli": "^3.0.0"
